<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/filter_action"
        android:orderInCategory="1"
        android:title="@string/sort_action_title"
        app:showAsAction="always">

         <menu>
             <item
                 android:id="@+id/no_sort_action"
                 app:showAsAction="ifRoom"
                 android:title="@string/sort_no_sort"/>
            <item
                android:id="@+id/duration_action"
                app:showAsAction="ifRoom"
                android:title="@string/sort_duration_title"/>
             <item
                android:id="@+id/genre_action"
                app:showAsAction="ifRoom"
                android:title="@string/sort_genre_title" />
            <item
                android:id="@+id/price_action"
                app:showAsAction="ifRoom"
                android:title="@string/sort_price_title"/>
        </menu>
    </item>
</menu>